--- a/src/containers/ForecastTable/ForecastTable.scss
+++ b/src/containers/ForecastTable/ForecastTable.scss
@@ -1,46 +1,50 @@
 .forecast-table {
-    flex: 1;
+  flex: 1;
 
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        background-color: #f5f5f5;
-        border-radius: 8px;
-        overflow: hidden;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
 
-    h2 {
-        text-align: center;
-        padding: 20px 0;
-        background-color: #3498db;
-        color: white;
-        margin-top: 0;
-        margin-bottom: 15px;
-    }
+  h2 {
+    text-align: center;
+    padding: 20px 0;
+    background-color: #3498db;
+    color: white;
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
 
-    th,
-    td {
-        padding: 12px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-    }
+  th,
+  td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
 
-    th {
-        background-color: #2980b9;
-        color: white;
-    }
+  th {
+    background-color: #2980b9;
+    color: white;
+  }
 
-    tr:nth-child(even) {
-        background-color: #f2f2f2;
-    }
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
 
-    tr:hover {
-        background-color: #e6e6e6;
-    }
+  tr:hover {
+    background-color: #e6e6e6;
+  }
 
-    img {
-        vertical-align: middle;
-        margin-right: 8px;
-    }
+  img {
+    vertical-align: middle;
+    margin-right: 8px;
+    background-color: rgb(152, 197, 234);
+    border-radius: 50%;
+    padding: 2px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
 }
