--- a/src/containers/ForecastTable/ForecastTable.scss
+++ b/src/containers/ForecastTable/ForecastTable.scss
@@ -1,6 +1,10 @@
 .forecast-table {
   flex: 1;
 
+  @media (max-width: 768px) {
+      overflow-x: auto;
+    }
+
   table {
     width: 100%;
     border-collapse: collapse;
@@ -8,6 +12,10 @@
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    
+    @media (max-width: 768px) {
+        font-size: 14px;
+      }
   }
 
   h2 {
@@ -24,6 +32,10 @@
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
+
+    @media (max-width: 768px) {
+        padding: 8px;
+      }
   }
 
   th {
@@ -46,5 +58,10 @@
     border-radius: 50%;
     padding: 2px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    @media (max-width: 768px) {
+        width: 24px;
+        height: 24px;
   }
+}
 }
